# judo-techniques-bot

./: .bumpversion.toml  .env.example  .gitignore  Dockerfile  README.md  docker-compose-portainer.yaml  docker-compose-prod.yaml  docker-compose.yaml  production_script.sh  pyproject.toml
.github/: dependabot.yml
.github/archived/: terraform-apply.yml
.github/workflows/: aws.yml  bump-version.yml  cy.yml  terraform-apply.yml  terraform-plan.yml
judo_techniques_bot/: __init__.py  __main__.py  alembic.ini  bot.py  config.example.py  config.py  custom_logging.py  db.py  load_data.py  main.py  models.py  utils.py
judo_techniques_bot/data/: techniques_fixtures.csv
judo_techniques_bot/migrations/: env.py
judo_techniques_bot/migrations/versions/: 2021-07-31_1dcd8a18bfd5_.py  2021-07-31_2eecb7a44adb_.py  2021-07-31_4fa0d71e3598_.py  2021-07-31_bdcfc99aeebf_.py  2021-07-31_eed8d5f47027_.py  2021-08-01_762e4a7e7803_.py  2021-08-01_ecdfd2527ba7_.py  2021-08-19_031968931281_.py  2021-09-22_60f987eb8df0_.py
requirements/: base.txt  dev.txt
src/: alembic.ini  bot.py  main.py  utils.py
src/migrations/versions/: 2021-07-31_1dcd8a18bfd5_.py  2021-07-31_2eecb7a44adb_.py  2021-07-31_bdcfc99aeebf_.py
terraform/: .gitignore  .terraform.lock.hcl  README.md  main.tf  variables.tf
tests/: __init__.py  techniques_test_data.pickle  test_bot.py
