[project]
name = "judo-techniques-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "alembic==1.17.1",
    "bump-my-version>=1.2.1",
    "praw==7.8.1",
    "psycopg2==2.9.11",
    "sentry-sdk==2.42.1",
    "sqlalchemy==2.0.44",
]

[dependency-groups]
dev = [
    "black==25.9.0",
    "coverage[toml]==7.11.0",
    "isort==7.0.0",
]

[tool.isort]
profile = "black"
multi_line_output=3

[tool.coverage.run]
source = ['judo_techniques_bot']
omit = ['*/__init__.py']
