[project]
name = "judo-techniques-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "alembic==1.17.2",
    "bump-my-version>=1.2.1",
    "praw==7.8.1",
    "psycopg2==2.9.11",
    "sentry-sdk==2.48.0",
    "sqlalchemy==2.0.45",
]

[dependency-groups]
dev = [
    "coverage[toml]==7.13.1",
    "isort==7.0.0",
    "ruff>=0.14.10",
    "ty>=0.0.5",
]

[tool.isort]
profile = "black"
multi_line_output=3

[tool.coverage.run]
source = ['judo_techniques_bot']
omit = ['*/__init__.py']
