[project]
name = "judo-techniques-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "alembic==1.18.5",
    "bump-my-version>=1.4.1",
    "praw==8.0.2",
    "psycopg2==2.9.12",
    "sentry-sdk==2.63.0",
    "sqlalchemy==2.0.51",
]

[dependency-groups]
dev = [
    "coverage[toml]==7.14.3",
    "isort==8.0.1",
    "ruff>=0.15.18",
    "ty>=0.0.54",
]

[tool.isort]
profile = "black"
multi_line_output=3

[tool.coverage.run]
source = ['judo_techniques_bot']
omit = ['*/__init__.py']
